Finished implementing grouping and made new group algo

--- a/HospitalDBMS/web/views/components/nav.pug
+++ b/HospitalDBMS/web/views/components/nav.pug
@@ -57,10 +57,8 @@ ul#misc-dropdown.dropdown-content
         a(href="PatientsInRooms") Patients in Rooms
     li
         a(href="PayRoll") Pay Roll
-    li
-        a(href="RoomInfo2") Room Info
 
-//- Mobile
+//- Mobile (Duplicate of Desktop to work around materializecss dropdown limitation)
 ul#misc-dropdown2.dropdown-content
     li
         a(href="AvailableRooms") Availible Rooms
@@ -74,8 +72,7 @@ ul#misc-dropdown2.dropdown-content
         a(href="PatientsInRooms") Patients in Rooms
     li
         a(href="PayRoll") Pay Roll
-    li
-        a(href="RoomInfo2") Room Info
+
 script.
     $(document).ready(function() {
         $('.button-collapse').sideNav();
