--- a/HospitalDBMS/web/views/roomInfo.pug
+++ b/HospitalDBMS/web/views/roomInfo.pug
@@ -3,47 +3,34 @@ block content
   include ./components/nav
   .container
     h2 Rooms by Department
-    #grid-wrapper
+    .row
       each department, index in roomInfo
-        .col.s12.m6
-          .card.primary.darken-1
-            .card-content.white-text
-              if index != 'null'
+        if index != 'null'
+          .col.s12.m4
+            .card.primary.darken-1
+              .card-content.white-text
                 span.card-title= "Department #"+index
                 ul.collection.primary
                   for room in department
                     li.collection-item.primary= "Room #:"+room.Rno
                     li.collection-item.primary= "Room Name:"+room.RName
-                    if room.Hcn != "null"
+                    if room.Hcn
                       li.collection-item.primary= "HCN:"+room.Hcn
                       li.collection-item.primary= "Patient Name:"+room.PName
                     else
                       li.collection-item.green
-                        i.tiny.material-icons check
+                        i.material-icons.left check
                         span Availible 
-              else
-                span.card-title= "Unassigned"
-                ul.collection.primary
-                  for patient in department
-                    li.collection-item.primary
-                      p
-                        span="HCN #:"+patient.Hcn
-                        br
-                        span="Patient Name: "+patient.PName
-                    
-      //- for department in departments
-        .col.s12.m6
-          .card.primary.darken-1
-            .card-content.white-text
-              span.card-title= "Department #"+department.Dno+": "+department.DName
-              ul.collection.primary.rooms
-                for room in rooms
-                  if room.Dno == department.Dno
-                    li.collection-item.primary
-                      if room.RStatus=="Availible"
-                        .chip.green
-                          span= room.RStatus
-                      else
-                        .chip.red
-                          span= room.RStatus
-                      span= "Room #"+room.Rno+": "+room.RName
+        else
+          .row
+            .col.s12
+              .card.primary.darken-1
+                .card-content.white-text
+                  span.card-title= "Unassigned"
+                  ul.collection.primary
+                    for patient in department
+                      li.collection-item.primary
+                        p
+                          span="HCN #:"+patient.Hcn
+                          br
+                          span="Patient Name: "+patient.PName
