fixed getting data from external api

--- a/HospitalDBMS/web/views/records.pug
+++ b/HospitalDBMS/web/views/records.pug
@@ -9,7 +9,7 @@ block content
           .card.secondary
             .card-content.white-text
               span.card-title="Patient Name: "+patient[0].PName
-              p= "HCN: "+patient[0].Hcn
+              p= "HCN: "+patient[0].PHcn
               .row
                 for record in patient
                   .col.s12.m4
